--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,80 @@
 /* Add CSS styling here */
+html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
+del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
+	vertical-align: baseline;
+	font-family: inherit;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	outline: ;
+	padding: ;
+	margin: 0;
+	border: ;
+	}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+	}
+body {
+	background: white;
+	line-height: 1;
+	color: black;
+    font-family: 'Allison', cursive;
+font-family: 'Dancing Script', cursive;
+	}
+ol, ul {
+	list-style: none;
+	}
+/* tables still need cellspacing="0" in the markup */
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+	}
+caption, th, td {
+	font-weight: normal;
+	text-align: left;
+	}
+/* remove possible quote marks (") from <q> & <blockquote> */
+blockquote:before, blockquote:after, q:before, q:after {
+	content: "";
+	}
+blockquote, q {
+	quotes: "" "";
+	}
+    header nav{
+        position: fixed;
+        width: 100%;
+        background-color: rgb(162, 137, 185);
+        height: 20vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        justify-content: space-evenly;
+        padding: 2%;
+    }
+    a{
+        border: 1px solid rgb(17, 17, 17);
+        background-color: rgb(255, 255, 255);
+        font-size: 1.5rem;
+        text-decoration: none;
+        padding: 1%;
+
+    }
+    .links{
+        display: flex;
+        justify-content: start;
+        flex-direction: row;
+        margin-left: 4%;
+        width: 50%;
+    }
+    h1{
+        font-size: 3rem;
+        width: 40%;
+        margin-left: 2%;
+    }
+    .top-left{
+        width: 100%;
+        height: auto;
+    }
